 Otherwise indicated differently, all changes made by 
     Jelmer Vernooij.

Ctrlproxy 3.0.4 UNRELEASED

  BUG FIXES

    * Check for empty argument to /CTRLPROXY BACKLOG (#132)

    * Integrate some more standard replication backends. 

    * Allow specifying a network in the password, separated by a colon (:).

    * Integrate listeners into the core.

    * Integrate socks support into listener code. Socks connections 
      can now be accepted at the same port as other connections.

    * Allow configuring a single listener in ~/.ctrlproxy/config.

    * Several simplifications of the configuration file.

    * Recognize NS as command for NickServ (#145)

    * Start checking plugin versions.

    * Open log file if stdout goes away.

    * Make /AWAY with empty argument mark as unaway. (Adeodato Simó)

    * Automatically mark as unaway when a client connects and auto-away/no_client=true. (#150)

    * Add support for handling additional 005 parameters: HCN.

	* Compress /NAMES lines (#123).

	* Bail out when invalid arguments are specified on the command-line
	  (Emanuele Giaquinta <e.giaquinta@glauco.it>)

  INTERNALS

    * Moved some common logging code to the core.

Ctrlproxy 3.0.3 2007-07-22

  BUG FIXES

    * Handle 470 response correctly.

    * Recognize supported channel / user modes correctly.
    
    * Properly store topic_set_time and topic_set_by in the 
      linestack. (#108)

    * Reset idle time when AWAY is used in auto-away (#121)

    * Fix crash when using /CTRLPROXY without arguments

    * Don't update config when we're disconnecting during shutdown. (#113)

    * Handle 354 response correctly. (#134)

    * Handle responses after forced joins correctly. (#125)

    * Handle 250 response correctly. (#138)

    * Handle 263 response correctly. (#135)

    * Handle 330 response correclty. (#137)

    * Handle 403 response correctly when sent in response to a MODE 
      query. (#139)
